Kubernetes-Manifests-file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: mainlb
  namespace: three-tier

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
  - http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 3500
